# greentic-dw

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  coverage-policy.json
.codex/: GLOBAL_RULES.md  PR-00-AUDIT.md  PR-01-bootstrap-new-repo-workspace-codex-and-ci.md  PR-01-planning-core-contracts.md  PR-02-workspace-core-contracts.md  PR-03-delegation-core-contracts.md  PR-03-runtime-engine-hooks-observers-and-pack-integration.md  PR-04-cli-wizard-i18n-answerdocument-and-dev-integration-contract.md  PR-04-reflection-core-contracts.md  PR-05-TESTS-EXAMPLES-DOCS.md  PR-05-context-core-contracts.md  PR-06-SOURCE-RESOLUTION-CONTRACT.md  PR-06-runtime-deep-loop-integration.md  PR-07-TEMPLATE-DESCRIPTOR-MODEL.md  PR-07-manifest-and-capability-wiring.md  PR-08-TEMPLATE-CATALOG-DISCOVERY.md  PR-08-fixtures-docs-and-migration.md  PR-10-RESOLVED-COMPOSITION-DOCUMENT.md  PR-11-MULTI-AGENT-APPLICATION-MODEL.md  PR-12-COMPOSABLE-QA-ASSEMBLY.md  PR-13-COMPOSITION-RESOLVER.md  PR-15-APPLICATION-PACK-MATERIALIZER.md  PR-19-E2E-DEFAULT-PERSONALISED-FLOWS.md  PR-20-AUDIT-ADJACENT-REPOS-FOR-DW-WIZARD-INTEGRATION.md  PR-20-architecture-deep-agents.md  PR-21-INTEGRATION-FINDINGS-AND-COMPATIBILITY-MATRIX.md  PR-21-sequence-diagrams-and-contracts.md  PR-22-DESIGN-TIME-VS-SETUP-RUNTIME-PHASE-MODEL.md  PR-22-migration-guide-and-handbook.md  PR-23-GENERATE-FOLLOW-ON-CODEX-PRS-FOR-ADJACENT-REPOS.md  PR-24-PACK-HOSTED-DW-WIZARD-ENTRY-CONTRACT.md  PR-25-DW-WIZARD-ASSEMBLY-FROM-TEMPLATES-AND-PROVIDERS.md  PR-26-DW-TO-PACK-HANDOFF-CONTRACT.md  PR-27-CAPABILITY-PACK-INCLUSION-PLAN-FOR-BUNDLE.md  PR-28-MULTI-AGENT-APP-PACK-DW-FLOW.md  PR-29-END-TO-END-REVIEWABLE-DESIGN-AND-SETUP-HANDOFF.md  PR-30-research-worker.md  PR-31-incident-analysis-multi-agent.md  PR-32-pack-bundle-integration.md  PR-40-unit-and-integration-matrix.md  (+4 more)
.codex/done/: PR-00-AUDIT-RESULTS.md  PR-01-DW-V02-CAPABILITY-MODEL.md  PR-02-PACK-CBOR-CAPABILITY-MAPPINGS.md  PR-02-implement-core-types-manifest-and-multitenant-i18n-contracts.md  PR-03-RUNTIME-RESOLUTION-BINDINGS.md  PR-04-FLOW-BUNDLE-SETUP-INTEGRATION.md  PR-05-memory-extension-surface-and-testing-nightlies.md  PR-09-PROVIDER-CATALOG-SOURCE-REFS.md  PR-14-APPLICATION-PACK-MATERIALIZATION-CONTRACT.md  PR-16-BUNDLE-INCLUSION-PLAN-CONTRACT.md  PR-17-BUNDLE-PLAN-GENERATOR.md  (+1 more)
.github/workflows/: ci.yml  (+12 more)
benches/: perf.rs
ci/: local_check.sh  nightly_coverage.sh  nightly_e2e.sh  nightly_perf.sh  publish_order.py
crates/greentic-cap-core/: Cargo.toml
crates/greentic-cap-core/src/: lib.rs
crates/greentic-cap-profile/: Cargo.toml
crates/greentic-cap-profile/src/: lib.rs
crates/greentic-cap-resolver/: Cargo.toml
crates/greentic-cap-resolver/src/: lib.rs
crates/greentic-cap-schema/: Cargo.toml
crates/greentic-cap-schema/src/: lib.rs
crates/greentic-cap-types/: Cargo.toml
crates/greentic-cap-types/src/: lib.rs
crates/greentic-dw-cli/: Cargo.toml  README.md
crates/greentic-dw-cli/src/: cli_types.rs  i18n.rs  lib.rs  serve.rs  wizard.rs  wizard_tests.rs  worker.rs
crates/greentic-dw-cli/tests/: operala_e2e.rs
crates/greentic-dw-context-llm/: Cargo.toml
crates/greentic-dw-context-llm/src/: bridge.rs  lib.rs  prompt.rs
crates/greentic-dw-core/: Cargo.toml  README.md
crates/greentic-dw-core/src/: lib.rs
crates/greentic-dw-delegation/: Cargo.toml  LICENSE  README.md
crates/greentic-dw-delegation/src/: error.rs  fixtures.rs  lib.rs  model.rs  tests.rs  traits.rs  validate.rs
crates/greentic-dw-engine/: Cargo.toml  README.md
crates/greentic-dw-engine/src/: lib.rs
crates/greentic-dw-manifest/: Cargo.toml  README.md
crates/greentic-dw-manifest/src/: lib.rs
crates/greentic-dw-operala-bridge/: Cargo.toml
crates/greentic-dw-operala-bridge/src/: lib.rs
crates/greentic-dw-operala-invoker/: Cargo.toml
crates/greentic-dw-operala-invoker/src/: lib.rs
crates/greentic-dw-operala-invoker/tests/: live_llm.rs
crates/greentic-dw-pack/: Cargo.toml  README.md
crates/greentic-dw-pack-builder/: Cargo.toml  README.md
crates/greentic-dw-pack-builder/src/: lib.rs  meta.rs  supplier.rs
crates/greentic-dw-pack-builder/tests/: snapshot.rs
crates/greentic-dw-pack/src/: lib.rs
crates/greentic-dw-planning/: Cargo.toml  README.md
crates/greentic-dw-planning-llm/: Cargo.toml
crates/greentic-dw-planning-llm/src/: bridge.rs  lib.rs  prompt.rs
crates/greentic-dw-planning/src/: error.rs  fixtures.rs  lib.rs  model.rs  serde.rs  tests.rs  traits.rs  validate.rs
crates/greentic-dw-reflection/: Cargo.toml  README.md
crates/greentic-dw-reflection-llm/: Cargo.toml
crates/greentic-dw-reflection-llm/src/: bridge.rs  lib.rs  prompt.rs
crates/greentic-dw-reflection/src/: error.rs  fixtures.rs  lib.rs  model.rs  tests.rs  traits.rs
crates/greentic-dw-runtime/: Cargo.toml  README.md
crates/greentic-dw-runtime/src/: capability.rs  coordinator_flow.rs  coordinator_planner.rs  deep_loop.rs  final_response.rs  lib.rs  memory.rs  runtime.rs  runtime_tests.rs  worker_tool_execution.rs  worker_tool_registry.rs
crates/greentic-dw-testing/: Cargo.toml
crates/greentic-dw-testing/src/: deep_examples_tests.rs  deep_fixtures_tests.rs  deep_loop_harness_tests.rs  deep_matrix_tests.rs  deep_snapshot_tests.rs  lib.rs  starter_e2e_tests.rs
crates/greentic-dw-types/: Cargo.toml  README.md
crates/greentic-dw-types/src/: app_model.rs  bundle_plan.rs  bundle_plan_tests.rs  composition.rs  composition_tests.rs  lib.rs  pack_spec.rs  pack_spec_tests.rs  provider_catalog.rs  provider_catalog_tests.rs  qa.rs  qa_tests.rs  resolver.rs  resolver_tests.rs  review.rs  review_tests.rs  source_ref.rs  source_ref_tests.rs  starter_catalogs_tests.rs  task.rs  task_tests.rs  template.rs  template_catalog.rs  template_catalog_tests.rs  template_tests.rs
crates/greentic-dw-workspace/: Cargo.toml  README.md
crates/greentic-dw-workspace-mem/: Cargo.toml
crates/greentic-dw-workspace-mem/src/: lib.rs
crates/greentic-dw-workspace/src/: error.rs  fixtures.rs  lib.rs  model.rs  tests.rs  traits.rs  validate.rs
src/: main.rs
tests/: perf_scaling.rs  perf_timeout.rs
tools/: i18n.sh
(+100 files in other folders)
