[workspace]
members = [
    ".",
    "crates/greentic-dw-cli",
    "crates/greentic-dw-context",
    "crates/greentic-dw-types",
    "crates/greentic-dw-manifest",
    "crates/greentic-dw-core",
    "crates/greentic-dw-delegation",
    "crates/greentic-dw-runtime",
    "crates/greentic-dw-engine",
    "crates/greentic-dw-pack",
    "crates/greentic-dw-planning",
    "crates/greentic-dw-reflection",
    "crates/greentic-dw-testing",
    "crates/greentic-dw-workspace",
]
resolver = "2"

[workspace.package]
version = "0.5.2"
edition = "2024"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/greenticai/greentic-dw"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
criterion = "0.8"
greentic-dw-cli = { path = "crates/greentic-dw-cli", version = "0.5" }
greentic-dw-context = { path = "crates/greentic-dw-context", version = "0.5" }
greentic-dw-core = { path = "crates/greentic-dw-core", version = "0.5" }
greentic-dw-delegation = { path = "crates/greentic-dw-delegation", version = "0.5" }
greentic-dw-engine = { path = "crates/greentic-dw-engine", version = "0.5" }
greentic-dw-manifest = { path = "crates/greentic-dw-manifest", version = "0.5" }
greentic-dw-pack = { path = "crates/greentic-dw-pack", version = "0.5" }
greentic-dw-planning = { path = "crates/greentic-dw-planning", version = "0.5" }
greentic-dw-reflection = { path = "crates/greentic-dw-reflection", version = "0.5" }
greentic-dw-runtime = { path = "crates/greentic-dw-runtime", version = "0.5" }
greentic-dw-testing = { path = "crates/greentic-dw-testing", version = "0.5" }
greentic-dw-types = { path = "crates/greentic-dw-types", version = "0.5" }
greentic-dw-workspace = { path = "crates/greentic-dw-workspace", version = "0.5" }
greentic-cap-core = { version = "0.5" }
greentic-cap-profile = { version = "0.5" }
greentic-cap-resolver = { version = "0.5" }
greentic-cap-schema = { version = "0.5" }
greentic-cap-types = { version = "0.5" }
schemars = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
tempfile = "3"
thiserror = "2"
ureq = { version = "3", default-features = false }

[package]
name = "greentic-dw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Greentic data workspace command-line entrypoint."
readme = "README.md"
repository = "https://github.com/greenticai/greentic-dw"
homepage = "https://github.com/greenticai/greentic-dw"
documentation = "https://docs.rs/greentic-dw"
keywords = ["greentic", "data", "workspace"]
categories = ["command-line-utilities"]
include = [
    "src/**",
    "crates/**",
    "tools/**",
    "ci/**",
    ".github/workflows/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
greentic-dw-cli = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
greentic-cap-types = { workspace = true }
greentic-dw-core = { workspace = true }
greentic-dw-engine = { workspace = true }
greentic-dw-manifest = { workspace = true }
greentic-dw-runtime = { workspace = true }
greentic-dw-types = { workspace = true }

[[bench]]
name = "perf"
harness = false
