bench = [
    { name = "perf", harness = false },
]

[workspace]
members = [
    ".",
    "crates/greentic-dw-cli",
    "crates/greentic-dw-context",
    "crates/greentic-dw-types",
    "crates/greentic-dw-manifest",
    "crates/greentic-dw-core",
    "crates/greentic-dw-delegation",
    "crates/greentic-dw-runtime",
    "crates/greentic-dw-engine",
    "crates/greentic-dw-pack",
    "crates/greentic-dw-planning",
    "crates/greentic-dw-reflection",
    "crates/greentic-dw-testing",
    "crates/greentic-dw-workspace",
]
resolver = "2"

[workspace.package]
version = "0.6.0-dev.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/greenticai/greentic-dw"

[workspace.dependencies]
criterion = "0.8"
serde_cbor = "0.11"
serde_json = "1"
tempfile = "3"
thiserror = "2"

[workspace.dependencies.clap]
version = "4"
features = [
    "derive",
]

[workspace.dependencies.greentic-dw-cli]
path = "crates/greentic-dw-cli"
version = ">=0.6.0-dev, <0.7.0-0"

[workspace.dependencies.greentic-dw-context]
path = "crates/greentic-dw-context"
version = ">=0.6.0-dev, <0.7.0-0"

[workspace.dependencies.greentic-dw-core]
path = "crates/greentic-dw-core"
version = ">=0.6.0-dev, <0.7.0-0"

[workspace.dependencies.greentic-dw-delegation]
path = "crates/greentic-dw-delegation"
version = ">=0.6.0-dev, <0.7.0-0"

[workspace.dependencies.greentic-dw-engine]
path = "crates/greentic-dw-engine"
version = ">=0.6.0-dev, <0.7.0-0"

[workspace.dependencies.greentic-dw-manifest]
path = "crates/greentic-dw-manifest"
version = ">=0.6.0-dev, <0.7.0-0"

[workspace.dependencies.greentic-dw-pack]
path = "crates/greentic-dw-pack"
version = ">=0.6.0-dev, <0.7.0-0"

[workspace.dependencies.greentic-dw-planning]
path = "crates/greentic-dw-planning"
version = ">=0.6.0-dev, <0.7.0-0"

[workspace.dependencies.greentic-dw-reflection]
path = "crates/greentic-dw-reflection"
version = ">=0.6.0-dev, <0.7.0-0"

[workspace.dependencies.greentic-dw-runtime]
path = "crates/greentic-dw-runtime"
version = ">=0.6.0-dev, <0.7.0-0"

[workspace.dependencies.greentic-dw-testing]
path = "crates/greentic-dw-testing"
version = ">=0.6.0-dev, <0.7.0-0"

[workspace.dependencies.greentic-dw-types]
path = "crates/greentic-dw-types"
version = ">=0.6.0-dev, <0.7.0-0"

[workspace.dependencies.greentic-dw-workspace]
path = "crates/greentic-dw-workspace"
version = ">=0.6.0-dev, <0.7.0-0"

[workspace.dependencies.greentic-cap-core]
version = ">=0.6.0-dev, <0.7.0-0"

[workspace.dependencies.greentic-cap-profile]
version = ">=0.6.0-dev, <0.7.0-0"

[workspace.dependencies.greentic-cap-resolver]
version = ">=0.6.0-dev, <0.7.0-0"

[workspace.dependencies.greentic-cap-schema]
version = ">=0.6.0-dev, <0.7.0-0"

[workspace.dependencies.greentic-cap-types]
version = ">=0.6.0-dev, <0.7.0-0"

[workspace.dependencies.schemars]
version = "1"
features = [
    "derive",
]

[workspace.dependencies.serde]
version = "1"
features = [
    "derive",
]

[workspace.dependencies.ureq]
version = "3"
default-features = false

[package]
name = "greentic-dw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Greentic data workspace command-line entrypoint."
readme = "README.md"
repository = "https://github.com/greenticai/greentic-dw"
homepage = "https://github.com/greenticai/greentic-dw"
documentation = "https://docs.rs/greentic-dw"
keywords = [
    "greentic",
    "data",
    "workspace",
]
categories = [
    "command-line-utilities",
]
include = [
    "src/**",
    "crates/**",
    "tools/**",
    "ci/**",
    ".github/workflows/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies.greentic-dw-cli]
workspace = true

[dev-dependencies.criterion]
workspace = true

[dev-dependencies.greentic-cap-types]
workspace = true

[dev-dependencies.greentic-dw-core]
workspace = true

[dev-dependencies.greentic-dw-engine]
workspace = true

[dev-dependencies.greentic-dw-manifest]
workspace = true

[dev-dependencies.greentic-dw-runtime]
workspace = true

[dev-dependencies.greentic-dw-types]
workspace = true
