[package]
name = "greentic-cap-resolver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic Greentic capability resolution helpers."
publish = false

[dependencies]
greentic-cap-profile = { workspace = true }
greentic-cap-types = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["serde", "schemars"]
serde = []
schemars = []
