[package]
name = "greentic-cap-schema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Schemas and validation helpers for Greentic capability declarations."
publish = false

[dependencies]
greentic-cap-types = { workspace = true }
greentic-cap-resolver = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["serde", "schemars"]
serde = []
schemars = []
