[package]
name = "greentic-dw-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI and wizard contract surface for greentic-dw."
readme = "README.md"
repository.workspace = true

[features]
default = []
# Enable the `gtc worker` authoring pipeline. Disabled on develop because
# greentic-dw-authoring pins research-lane crates (yanked 1.2.0-research /
# moved 1.3.0-research) that cannot resolve on the 1.2.0-dev lane.
# To re-enable, add these deps back and uncomment the feature list:
#   greentic-dw-authoring = { git = "https://github.com/greenticai/greentic-dw-authoring", rev = "...", optional = true }
#   greentic-types = { version = ">=1.2.0-dev, <1.3.0-0", optional = true }
#   pdf-extract = { version = "0.7", optional = true }
#   serde_yaml_bw = { version = "2", optional = true }
#   zip = { version = "2", optional = true }
# authoring = ["dep:greentic-dw-authoring", "dep:greentic-types", "dep:pdf-extract", "dep:serde_yaml_bw", "dep:zip"]

[dependencies]
clap = { workspace = true }
greentic-cap-types = { workspace = true }
greentic-dw-core = { workspace = true }
greentic-dw-engine = { workspace = true }
greentic-dw-manifest = { workspace = true }
greentic-dw-runtime = { workspace = true }
greentic-dw-types = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
