[package]
name = "greentic-dw-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI and wizard contract surface for greentic-dw."
readme = "README.md"
repository.workspace = true

[dependencies]
clap = { workspace = true }
greentic-cap-types = { workspace = true }
greentic-dw-core = { workspace = true }
greentic-dw-engine = { workspace = true }
greentic-dw-manifest = { workspace = true }
greentic-dw-runtime = { workspace = true }
greentic-dw-types = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
