[package]
name = "greentic-dw-context-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LLM-backed ContextProvider for the Greentic deep-worker (greentic-llm)."
publish = false

[dependencies]
greentic-dw-context = { workspace = true }
greentic-dw-workspace = { workspace = true }
greentic-llm = { git = "https://github.com/greenticai/greentic-llm", tag = "v1.2.6-research" }
async-trait = "0.1"
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
anyhow = "1"
greentic-dw-workspace-mem = { path = "../greentic-dw-workspace-mem" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
