[package]
name = "greentic-dw-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"
description = "Runtime operation model and transition logic for greentic-dw."
readme = "README.md"
repository = "https://github.com/greenticai/greentic-dw"

[dependencies]
greentic-dw-types = { version = "0.1.0", path = "../greentic-dw-types" }
greentic-dw-manifest = { version = "0.1.0", path = "../greentic-dw-manifest" }
thiserror = "1"
