[package]
name = "greentic-dw-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Runtime operation model and transition logic for greentic-dw."
readme = "README.md"
repository.workspace = true

[dependencies]
greentic-dw-types = { workspace = true }
greentic-dw-manifest = { workspace = true }
thiserror = { workspace = true }
