[package]
name = "greentic-dw-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Engine decision abstraction for greentic-dw runtime."
readme = "README.md"
repository.workspace = true

[dependencies]
greentic-dw-types = { workspace = true }
greentic-dw-core = { workspace = true }
thiserror = { workspace = true }
