[package]
name = "greentic-dw-manifest"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Manifest and schema contracts for greentic-dw."
readme = "README.md"
repository = "https://github.com/greenticai/greentic-dw"

[dependencies]
greentic-dw-types = { version = "0.1.0", path = "../greentic-dw-types" }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
serde_json = "1"
