[package]
name = "greentic-dw-manifest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Manifest and schema contracts for greentic-dw."
readme = "README.md"
repository.workspace = true

[dependencies]
greentic-cap-types = { workspace = true }
greentic-dw-types = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
