[package]
name = "greentic-dw-pack"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"
description = "Hook/sub integration contracts for greentic-dw."
readme = "README.md"
repository = "https://github.com/greenticai/greentic-dw"

[dependencies]
greentic-dw-core = { version = "0.1.0", path = "../greentic-dw-core" }
greentic-dw-types = { version = "0.1.0", path = "../greentic-dw-types" }
thiserror = "1"
