[package]
name = "greentic-dw-pack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Hook/sub integration contracts for greentic-dw."
readme = "README.md"
repository.workspace = true

[dependencies]
greentic-cap-schema = { workspace = true }
greentic-cap-resolver = { workspace = true }
greentic-cap-types = { workspace = true }
greentic-dw-core = { workspace = true }
greentic-dw-types = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
