[package]
name = "greentic-dw-planning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Planning contracts for greentic-dw deep-agent flows."
repository.workspace = true

[dependencies]
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

