[package]
name = "greentic-dw-reflection"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Reflection contracts for greentic-dw deep-agent flows."
repository.workspace = true

[dependencies]
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

