[package]
name = "greentic-dw-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Runtime kernel and memory extension surface for greentic-dw."
readme = "README.md"
repository.workspace = true

[dependencies]
greentic-cap-types = { workspace = true }
greentic-dw-context = { workspace = true }
greentic-dw-core = { workspace = true }
greentic-dw-delegation = { workspace = true }
greentic-dw-engine = { workspace = true }
greentic-dw-pack = { workspace = true }
greentic-dw-planning = { workspace = true }
greentic-dw-reflection = { workspace = true }
greentic-dw-types = { workspace = true }
greentic-dw-workspace = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
