[package]
name = "greentic-dw-types"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Canonical shared types for greentic-dw."
readme = "README.md"
repository = "https://github.com/greenticai/greentic-dw"

[dependencies]
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
