[package]
name = "greentic-dw-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Canonical shared types for greentic-dw."
readme = "README.md"
repository.workspace = true

[dependencies]
schemars = { workspace = true }
serde = { workspace = true }
