[package]
name = "greentic-dw-workspace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Workspace artifact contracts for greentic-dw deep-agent flows."
repository.workspace = true

[dependencies]
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

